unpackaged/main/default/objects/nbavs__PrivateLog__c/nbavs__PrivateLog__c.object-meta.xml
<CustomObject>
    <label>PrivateLog</label>
    <nameField>
        <displayFormat>PL-{00000}</displayFormat>
        <label>PrivateLog Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PrivateLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>