unpackaged/main/default/objects/nbavs__PrivateLog__c/fields/nbavs__Message__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Message__c</fullName>
    <label>Message</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>