unpackaged/main/default/objects/nbavs__PrivateLog__c/fields/nbavs__StackTrace__c.field-meta.xml
<CustomField>
    <fullName>nbavs__StackTrace__c</fullName>
    <label>StackTrace</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>