unpackaged/main/default/objects/nbavs__PrivateLog__c/fields/nbavs__Type__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Type__c</fullName>
    <label>Type</label>
    <length>32</length>
    <type>Text</type>
</CustomField>