unpackaged/main/default/objects/nbavs__PrivateLog__c/listViews/nbavs__All.listView-meta.xml
<ListView>
    <fullName>nbavs__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>